# taifun

./: README.md  demo.py  demo_taifun.py  demo_with_runner.py  docs.md  pyproject.toml
.github/workflows/: release.yml
taifun/: __init__.py  openai_api.py  taifun.py
tests/: test_openai_api.py  test_taichi.py  test_taifun.py
