[tool.poetry]
name = "taifun"
version = "0.1.0"
description = "Function mapper for Open AI Chat"
authors = ["Max Fröhlich <maxbruchmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
openai = "^0.27.8"
docstring-parser = "^0.15"
httpx = "^0.24.1"
rich = "^13.4.2"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-icdiff = "^0.6"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"



[tool.poetry-dynamic-versioning]
enable = true
